--- a/flask_server/requirements.txt
+++ b/flask_server/requirements.txt
@@ -1,4 +1,4 @@
-Flask==2.2.2
+Flask==3.0.0
 matplotlib==3.5.3
 pandas==1.4.4
 numpy==1.21.5
@@ -6,3 +6,4 @@ scikit-learn==1.1.3
 scipy==1.9.3
 seaborn==0.12.0
 xgboost==1.7.1
+gunicorn
